Prod-EU/force-app/main/default/objects/Account_Fund__c/Account_Fund__c.object-meta.xml
<CustomObject>
    <description>Junction object between Account and Fund objects. 
This object will be used to maintain the Account to Fund relationships.</description>
    <label>Account Fund</label>
    <nameField>
        <displayFormat>AFN-{0000}</displayFormat>
        <label>Account Fund Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Fund</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>