Prod-EU/force-app/main/default/objects/Account_Fund__c/fields/Account_18_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_18_Digit_Id__c</fullName>
    <description>Account 18 digit Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account 18 Digit Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>