Prod-EU/force-app/main/default/objects/Account_Fund__c/fields/Fund_18_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>Fund_18_Digit_Id__c</fullName>
    <description>Stores 18 digit Id, used for duplicate rule logic.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fund 18 Digit Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>